--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.13",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "nodemon": "^2.0.9",
+    "typescript": "^4.3.5"
   }
 }
