--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/contexts/Context.tsx"  ],
+, "src/contexts/Context.tsx", "src/pages/states.tsx"  ],
   "exclude": [
     "node_modules"
   ]
